[package]
name = "carno-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.0"
aws-sdk-s3 = "0.25.0"
clap = { version="4.2.1",features=["derive"] }
tokio = { version="1.27.0",features=["full"] }
tracing-subscriber = { version="0.3.16",features=["env-filter"]}
