[package]
name = "carno-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.44.0"
clap = {version="4.5.16", features = ["derive"]}
tokio = { version = "1.39.2", features = ["full"] }
# tracing-subscriber = { version="0.3.16",features=["env-filter"]}
